fixing responsive on mobile version

--- a/style/style.css
+++ b/style/style.css
@@ -10,9 +10,10 @@
 	overflow: hidden;
 	width: 100%;
 	height: 100vh;
+
 	background-image: url('../img/bacground.jpg');
 	background-size: cover;
-	background-position: center 70%;
+	background-position: center 80%;
 	background-repeat: no-repeat;
 	/* background-image: linear-gradient(to right, rgba(2, 3, 24,1), rgba(2, 3, 24,.9) , rgba(52, 1, 65,.8)); */
 	color: rgb(232, 235, 237);
@@ -174,20 +175,21 @@ nav ul li a:hover {
 }
 .home .description {
 	position: relative;
-
-	top: 3em;
+	left: -35%;
 	height: 50vh;
-	margin: auto;
+	margin-top: -2em;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
 	padding: 100px;
-	left: -25%;
+	/* background-color: #22afc2; */
 }
 
 .home .description h1 {
-	margin-top: -50px;
-	font-size: 1em;
+	position: relative;
+	width: 40rem;
+	margin: -50px -20rem 0 0;
+	font-size: 2em;
 }
 
 .home .description p {
@@ -286,19 +288,19 @@ nav ul li a:hover {
 	.home .description {
 		position: relative;
 		top: 3em;
+		left: -35%;
 		height: 50vh;
 		margin: auto;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-evenly;
 		padding: 100px;
-		left: -25%;
 		/* background-color: #22afc2; */
 	}
 
 	.home .description h1 {
 		margin-top: -50px;
-		font-size: 3em;
+		font-size: 2em;
 	}
 
 	.home .description p {
